--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,12 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.7'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.kafka:spring-kafka'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.testcontainers:mysql:1.20.1'
+	testImplementation 'org.testcontainers:kafka:1.20.1'
+	testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
+
+
 }
 
 
@@ -59,7 +65,7 @@ java {
 }
 
 application {
-	mainClass = 'org.example.userservice.UserserviceApplication'
+	mainClass = 'com.example.userservice.UserserviceApplication'
 }
 
 
