--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=userservice
-spring.kafka.bootstrap-servers=${KAFKA_HOST:192.168.14.128}:${KAFKA_PORT:9092}
+spring.kafka.bootstrap-servers=${KAFKA_HOST:localhost}:${KAFKA_PORT:29092}
 spring.kafka.consumer.properties.max.poll.interval.ms=300000
 spring.kafka.consumer.properties.session.timeout.ms=45000
 spring.kafka.consumer.auto-offset-reset=earliest
@@ -11,7 +11,7 @@ spring.kafka.topic.name=testing_json
 spring.kafka.consumer.properties.spring.json.type.mapping=auth:com.example.userservice.entities.UserInfoDto
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.14.128}:${MYSQL_PORT:3306}/${MYSQL_DB:userservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:userservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.show-sql=true
