--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -76,5 +76,5 @@ jobs:
           git config user.name "Kapil Soni"
           git config user.email "kapilsoni54768161@gmail.com"
           git add .
-          git commit -m "Update user-service image to ${needs.build-image.outputs.IMAGE_TAG}" || echo "No changes to commit"
+          git commit -m "Update user-service image to ${{needs.build-image.outputs.IMAGE_TAG}}" || echo "No changes to commit"
           git push
